k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slicer-vnc
  namespace: slicer
  labels:
    app.kubernetes.io/name: slicer
    app.kubernetes.io/component: slicer
spec:
  selector:
    app.kubernetes.io/name: slicer
  ports:
    - protocol: TCP
      name: vnc
      port: 6901
      targetPort: 6901

---
apiVersion: v1
kind: Service
metadata:
  name: slicer-webdav
  namespace: slicer
  labels:
    app.kubernetes.io/name: slicer
    app.kubernetes.io/component: slicer
spec:
  selector:
    app.kubernetes.io/name: slicer
  ports:
    - protocol: TCP
      name: webdav
      port: 8085
      targetPort: 8085
